--- a/nginx.conf
+++ b/nginx.conf
@@ -49,8 +49,8 @@ http {
         location /luna/ {
             try_files $uri / /index.html;
             alias /opt/luna/;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
+            #proxy_set_header Upgrade $http_upgrade;
+            #proxy_set_header Connection "upgrade";
         }
 
         location /media/ {
@@ -80,8 +80,8 @@ http {
             proxy_set_header Host $host;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             access_log off;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
+            #proxy_set_header Upgrade $http_upgrade;
+            #proxy_set_header Connection "upgrade";
         }
 
         location /guacamole/ {
